--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "next": "14.1.1",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.1"
+    "react-icons": "^5.0.1",
+    "react-loading": "^2.0.3"
   },
   "devDependencies": {
     "eslint": "^8",
